Update author avatar image path in config

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "https://qianwang.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "/images/QianWang_bright.jpg"
   name             : "Qian Wang"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate in Economics "
